CHANGES IN VERSION 1.30.11
-------------------------

NEW FEATURES

    o 'BIOCONDUCTOR_CONFIG_FILE' option allows users to provide an offline
    and local configuration file (config.yaml) for version validation.

USER VISIBLE CHANGES

    o Respect `options(repos = c(CRAN = "..."))`. See
      https://github.com/Bioconductor/BiocManager/issues/69

BUG FIXES

    o Increase timeout from 1 to 5 minutes (300 seconds) to make
      download of large packages more robust.

CHANGES IN VERSION 1.30.10
-------------------------

MINOR CHANGES

    o Restore startup message with recommended version

    o Update mis-configuration skip in tests

CHANGES IN VERSION 1.30.9
-------------------------

MINOR CHANGES

    o Use `packageStartupMessage()` in .onLoad

    o Tests are robust to missing Suggests: BiocVersion

CHANGES IN VERSION 1.30.8
-------------------------

MINOR CHANGES

    o Tests are skipped if is there is a misconfiguration or the CRAN
      builder has no internet access.

CHANGES IN VERSION 1.30.7
-------------------------

NEW FEATURES

    o Support R-4.0

MINOR CHANGES

    o Conform to CRAN policy to fail with messages rather than
      warnings or errors when internet access fails; internet access
      failures continue to generate warnings or errors during regular
      use.

CHANGES IN VERSION 1.30.6
-------------------------

MINOR CHANGES

    o Improve unit tests under Bioconductor versions 3.8, 3.9, 3.10.

    o Improve error message when non-interactive version update fails.

BUG FIXES

    o BiocManager loads when off-line.

CHANGES IN VERSION 1.30.5
-------------------------

NEW FEATURES

    o Allow users to specify `checkBuilt` when invoking `valid()` or
    `install()`. Set default `FALSE`.

MINOR CHANGES

    o Allow use of BiocInstaller for R < 3.5, pointing to biocLite()
    when appropriate.

    o Improve performance of version checking (issue #42 @HenrikBengtsson).

    o Document off-line installation best practices.
