@@ -38,6 +38,10 @@ NULL
 #' Options influencing package behavior (see `?options`, `?getOption`)
 #' include:
 #'
+#' - `"repos"`, `"BiocManager.check_repositories"`,
+#'   `"BiocManager.snapshot"`: URLs of additional repositories for use
+#'   by `BiocManger::install()`. See `?repositories`.
+#'
 #' - `"pkgType"`: The default type of packages to be downloaded and
 #'   installed; see `?install.packages`.
 #'
